davet kodu oluşturma modalı yapıldı

--- a/TalkRoomDemo.PresentationLayer/Views/Register/Index.cshtml
+++ b/TalkRoomDemo.PresentationLayer/Views/Register/Index.cshtml
@@ -27,7 +27,7 @@
                         <div class="input-groups">
                             <div class="main-form-header">
                                 <h1>TalkRoom</h1>
-                                <p>Hoş geldin</p>
+                                <p>Hoş Geldin</p>
                             </div>
                             <div class="email-wrapper">
                                 <label for="emailORphone">
