--- a/TalkRoomDemo.PresentationLayer/Views/Register/Index.cshtml
+++ b/TalkRoomDemo.PresentationLayer/Views/Register/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using TalkRoomDemo.DtoLayer.Dtos.RegisterDto
+﻿@using TalkRoomDemo.DtoLayer.Dtos
+
 @model AppUserRegisterDto
 @{
     Layout = null;
@@ -49,6 +50,7 @@
                                     <span class="required">*</span>
                                 </label>
                                 <input type="text" asp-for="UserName" id="emailORphone" required="">
+                                
                             </div>
                             <div class="email-wrapper">
                                 <label for="emailORphone">
@@ -56,6 +58,7 @@
                                     <span class="required">*</span>
                                 </label>
                                 <input type="email" asp-for="Email" id="emailORphone" required="">
+                                
                             </div>
                             <div class="password-wrapper">
                                 <label for="password">
@@ -63,6 +66,7 @@
                                     <span class="required">*</span>
                                 </label>
                                 <input type="password" asp-for="Password" id="password" required="">
+                                
                             </div>
                             <div class="password-wrapper">
                                 <label for="password">
@@ -76,12 +80,12 @@
                         </div>
                        <br /><br />
                         <div class="login">
+                            <div asp-validation-summary="All" style="color:red; margin-bottom:1rem;"></div>
                             <input type="submit" value="Kayıt Ol" style="background: var(--btn-bg);
     transition: background-color 0.17s ease;
-    --btn-bg-hover: var(--btn-bg-hover);"></input>
+    --btn-bg-hover: var(--btn-bg-hover);">
                         </div>
                         <div class="small-register">
-                            <div asp-validation-summary="ModelOnly"></div>
                             <span>bir hesabım var</span>
                             <a href="~/Login/Index">Giriş Yap</a>
                         </div>
