--- a/TalkRoomDemo.PresentationLayer/Views/Shared/_HomeLayout.cshtml
+++ b/TalkRoomDemo.PresentationLayer/Views/Shared/_HomeLayout.cshtml
@@ -1,6 +1,4 @@
 ﻿<!DOCTYPE html>
-<!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -13,11 +11,12 @@
         <aside class="servers-bar">
             <!-- Sunucu Listesi -->
             <div class="first-chanel-server">
-                <img class="server" src="~/login\image\logo.svg" />
+                <img class="server" src="~/Login/image/Logo.svg" />
                 <div class="element"></div>
             </div>
             <div><img class="server" src="~/login\image\logo.svg" /></div>
             
+
             
         </aside>
 
@@ -39,6 +38,23 @@
                     </form>
                 </div>
             </div>
+            <div id="copyNotification2" style="
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #4BB543;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.5s, bottom 0.5s;
+    font-weight: 600;
+    z-index: 1000;
+">
+                Yeni oda Oluşturuldu!
+            </div>
             <div id="roomModal2" class="modal">
                 <div class="modal-content">
                     <div class="cls-h">
@@ -46,8 +62,28 @@
                         <h2>Davet Kodunuz</h2>
                     </div>
                     <form id="createRoomForm2">
-                        <input type="text" id="roomName2" value="#111111" readonly required />
+                        <input style="    background: #2a272752;
+    border: solid #505050;
+    border-radius: 1.2rem;
+    height: 20px;
+    padding: 10px;
+    color: white;
+    font-size: 0.8rem;" type="text" id="roomName2" value="#111111" readonly required />
                         <button type="submit">Linki Kopyala</button>
+                    </form>
+                    <div class="cls-h" style="justify-content: flex-end;">
+                        
+                        <h2>Davet kodunu girin</h2>
+                    </div>
+                    <form method="post" style="margin-top:0.75rem;">
+                        <input style="    background: #2a272752;
+    border: solid #505050;
+    border-radius: 1.2rem;
+    height: 20px;
+    padding: 10px;
+    color: white;
+    font-size: 0.8rem;" type="text" id="roomName2"/>
+                        <button type="submit">Linki Giriniz</button>
                     </form>
                 </div>
             </div>
@@ -72,7 +108,7 @@
             <!-- Kullanıcı Paneli -->
             <div class="user-panel">
                 <div class="user-info">
-                    <img src="~/Login/image/pp.jpg" alt="Profil" class="profile-pic">
+                    <img src="@User.FindFirst("ImageUrl")?.Value" alt="Profil" class="profile-pic">
                     <div class="user-details">
                         <div class="username">@User.FindFirst("UserName")?.Value</div>
                         <div class="status online"></div>
@@ -89,7 +125,7 @@
                         <input type="range" min="0" max="1" step="0.01" value="1" id="volumeSlider" />
                     </div>
 
-                    <a href="/ayarlar" class="icon-btn settings-btn" style="text-decoration: none; margin-right: 5px;">⚙️</a>
+                    <a href="Home/Settings" class="icon-btn settings-btn" style="text-decoration: none; margin-right: 5px;">⚙️</a>
                 </div>
             </div>
 
@@ -116,29 +152,22 @@
             </div>
             <div style="border-bottom:2px solid #4c5058" class="element"></div>
             <!-- arkadaş listesi -->
-            <div class="channel">
-                <div class="user-info">
-                    <img src="~/Login/image/pp.jpg" alt="Profil" class="profile-pic">
-                    <div class="user-details">
-                        <div class="username">
-                            @User.FindFirst("UserName")?.Value
-                        </div> <!-- bu kısıma arkadaş listesinde olan kişilerin isimleri gelecek-->
-                        <div class="status online"></div> <!-- bı kısıma da backendde arkadaşlardan birisi çevrim içi olursa (bool değikeni atanacak) yeşil olmazsa gri olacak-->
-                        <!-- bu kısıma bir a tagı ya da link ver basıldığı zaman özel sohbet sayfası açılsın-->
-                    </div>
-                </div>
+            
+            <div id="friendListContainer">
+                <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+                <script>
+                    $(document).ready(function () {
+                        $("#friendListContainer").load("/Friend/GetFriendPartial");
+                    });
+                </script>
             </div>
-            <div class="channel">
-                <div class="user-info">
-                    <img src="~/Login/image/pp.jpg" alt="Profil" class="profile-pic">
-                    <div class="user-details">
-                        <div class="username">yeni arkadaş</div> <!-- bu kısıma arkadaş listesinde olan kişilerin isimleri gelecek-->
-                        <div class="status online"></div> <!-- bı kısıma da backendde arkadaşlardan birisi çevrim içi olursa (bool değikeni atanacak) yeşil olmazsa gri olacak-->
-                    </div>
-                </div>
-            </div>
+           
         </aside>
     </div>
     <script src="~/js/home.js"></script>
+    <script>
+        window.serverInviteCode = @Html.Raw(System.Text.Json.JsonSerializer.Serialize(User.FindFirst("FriendCodes")?.Value));
+        
+    </script>
 </body>
 </html>
