--- a/TalkRoomDemo.PresentationLayer/Views/Shared/_HomeLayout.cshtml
+++ b/TalkRoomDemo.PresentationLayer/Views/Shared/_HomeLayout.cshtml
@@ -61,30 +61,10 @@
                         <span id="closeModalBtn2" class="close">&times;</span>
                         <h2>Davet Kodunuz</h2>
                     </div>
-                    <form id="createRoomForm2">
-                        <input style="    background: #2a272752;
-    border: solid #505050;
-    border-radius: 1.2rem;
-    height: 20px;
-    padding: 10px;
-    color: white;
-    font-size: 0.8rem;" type="text" id="roomName2" value="#111111" readonly required />
-                        <button type="submit">Linki Kopyala</button>
-                    </form>
-                    <div class="cls-h" style="justify-content: flex-end;">
-                        
-                        <h2>Davet kodunu girin</h2>
-                    </div>
-                    <form method="post" style="margin-top:0.75rem;">
-                        <input style="    background: #2a272752;
-    border: solid #505050;
-    border-radius: 1.2rem;
-    height: 20px;
-    padding: 10px;
-    color: white;
-    font-size: 0.8rem;" type="text" id="roomName2"/>
-                        <button type="submit">Linki Giriniz</button>
-                    </form>
+
+                    <!-- Davet Linki girme ve davet kodu oluşturma -->
+                    @await Html.PartialAsync("~/Views/FriendRequest/AcceptInvite.cshtml")
+
                 </div>
             </div>
             <div id="copyNotification" style="
@@ -154,6 +134,7 @@
             <!-- arkadaş listesi -->
             
             <div id="friendListContainer">
+                
                 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
                 <script>
                     $(document).ready(function () {
