--- a/TalkRoomDemo.PresentationLayer/Views/ConfirmMail/Index.cshtml
+++ b/TalkRoomDemo.PresentationLayer/Views/ConfirmMail/Index.cshtml
@@ -61,6 +61,8 @@
                 </div>
         </main>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/8.0.8/signalr.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode-generator/1.4.4/qrcode.min.js"></script>
     <script src="~/Login/js/script.js"></script>
 </body>
