--- a/TalkRoomDemo.PresentationLayer/Views/Shared/_HomeLayout.cshtml
+++ b/TalkRoomDemo.PresentationLayer/Views/Shared/_HomeLayout.cshtml
@@ -134,7 +134,8 @@
             <!-- arkadaş listesi -->
             
             <div id="friendListContainer">
-                
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/8.0.8/signalr.min.js"></script>
+
                 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
                 <script>
                     $(document).ready(function () {
