bildirim butonu yapıldı arkadaş istekleri kontrol edildi signalR bağalanacak bildirim kutusuna.

--- a/TalkRoomDemo.PresentationLayer/Views/Friend/_FriendListPartial.cshtml
+++ b/TalkRoomDemo.PresentationLayer/Views/Friend/_FriendListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@using TalkRoomDemo.DtoLayer.Dtos
+﻿﻿@using TalkRoomDemo.DtoLayer.Dtos
 @model List<AppUserFriendListDto>
 
 @foreach (var friend in Model)
