--- a/TalkRoomDemo.PresentationLayer/Views/FriendRequest/GetRequestList.cshtml
+++ b/TalkRoomDemo.PresentationLayer/Views/FriendRequest/GetRequestList.cshtml
@@ -1,4 +1,4 @@
-﻿@using TalkRoomDemo.DtoLayer.Dtos
+﻿﻿@using TalkRoomDemo.DtoLayer.Dtos
 @model List<AppUserFriendListDto>
 
 @if (Model != null && Model.Count > 0)
@@ -22,7 +22,7 @@
                 Reddet
             </button>
         </div>
-        
+
     }
     <script>
         document.addEventListener("click", async (e) => {
@@ -41,4 +41,3 @@
         });
     </script>
 }
-
