sunucu oluşturma,arkadaş istekleri, arkadaş çevrimiçi-dışı durumları kontrolü yapıldı.

--- a/TalkRoomDemo.PresentationLayer/Views/FriendRequest/AcceptInvite.cshtml
+++ b/TalkRoomDemo.PresentationLayer/Views/FriendRequest/AcceptInvite.cshtml
@@ -1,4 +1,4 @@
-﻿<form id="createRoomForm2">
+﻿<form style="margin-bottom:12px;" id="createRoomForm2">
     <input style="    background: #2a272752;
     border: solid #505050;
     border-radius: 1.2rem;
@@ -19,6 +19,6 @@
     height: 20px;
     padding: 10px;
     color: white;
-    font-size: 0.8rem;" type="text" id="roomName3" name="inviteCode" />
+    font-size: 0.8rem;" type="text" id="roomName3" name="inviteCode" /> 
     <button type="submit">Linki Giriniz</button>
 </form>
