--- a/TalkRoomDemo.PresentationLayer/Views/Home/Settings.cshtml
+++ b/TalkRoomDemo.PresentationLayer/Views/Home/Settings.cshtml
@@ -9,6 +9,7 @@
         <title>TalkRoom-Ayarlar</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="~/css/setting.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf/notyf.min.css" />
     </head>
     <body>
         <button type="button" onclick=" window.location.href='@Url.Action("Index", "Home")'" class="close-btn">✖ Kapat</button>
@@ -37,26 +38,14 @@
                 <button type="submit" id="saveBtn">Kaydet</button>
             </div>
         </form>
-        @if (TempData["Success"] != null)
-        {
-            <div id="copyNotification3" style="
-                position: fixed;
-                bottom: 20px;
-                left: 50%;
-                transform: translateX(-50%);
-                background-color: #4BB543;
-                color: white;
-                padding: 10px 20px;
-                border-radius: 5px;
-                opacity: 0;
-                pointer-events: none;
-                transition: opacity 0.5s, bottom 0.5s;
-                font-weight: 600;
-                z-index: 1000;
-            ">
-                Profil Başarı Bir Şekilde Değiştirildi!
-            </div>
-        }
+     
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/notyf/notyf.min.js"></script>
+
+
+    @await Component.InvokeAsync("Notyf")
+    
+
     </body>
 
     <script>
@@ -86,23 +75,7 @@
             }
         });
 
-      window.onload = function () {
-        if (typeof showCopyNotification3 === "function") {
-            showCopyNotification3();
-        }
-    };
-        function showCopyNotification3() {
-        const notification = document.getElementById('copyNotification3');
-        notification.style.opacity = '1';
-        notification.style.bottom = '40px'; // yukarı doğru hafif hareket
-        notification.style.pointerEvents = 'auto';
-
-        setTimeout(() => {
-            notification.style.opacity = '0';
-            notification.style.bottom = '20px'; // eski haline dönüyor
-            notification.style.pointerEvents = 'none';
-        }, 2500); // 5 saniye sonra kayboluyor
-    }
+     
     </script>
 
     </html>
